--- a/Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.tex
+++ b/Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.tex
@@ -5385,7 +5385,9 @@ Prove that \(M\) is torsion-free of rank 1 but not free.
 
 \end{concept}
 
-:::\{.solution\} \envlist
+\begin{solution}
+
+\envlist
 
 \begin{proof}[of a]
 
@@ -5601,6 +5603,8 @@ Notation: Let \(0_R\) denote \(0\in R\) regarded as a ring element, and
 \end{proof}
 
 \end{proof}
+
+\end{solution}
 
 \hypertarget{star-spring-2020-6-done}{%
 \subsubsection{\texorpdfstring{\(\star\) Spring 2020 \#6
