--- a/Algebra/Review Doc/AlgebraQualNotes.tex
+++ b/Algebra/Review Doc/AlgebraQualNotes.tex
@@ -3710,8 +3710,8 @@ Show that TFAE:
 \item
   \(A\in \mathsf{Field}\)
 \item
-  \(A\) is a simple ring, so \$\operatorname{Id}(A) =
-  \left\{{ 0, A }\right\}.
+  \(A\) is a simple ring, so
+  \(\operatorname{Id}(A) = \left\{{ 0, A }\right\}\).
 \item
   If \(B\in \mathsf{Field}\) is nonzero then every ring morphism
   \(A\to B\) is injective.
@@ -6205,11 +6205,12 @@ Writing \(\operatorname{Spec}(A) = \left\{{(\lambda_i, b_i)}\right\}\),
 \begin{fact}
 
 For \(A\in \operatorname{Mat}(m\times n; R)\) over \(R\) any PID,
-\(\SNF(A)\) is a matrix whose diagonal entries are the invariant
-factors. How to compute \(\SNF(A)\): take
+\(\mathrm{SNF}(A)\) is a matrix whose diagonal entries are the invariant
+factors. How to compute \(\mathrm{SNF}(A)\): take
 \(A = \operatorname{diag}(a_i)\) where \(a_i = d_i/d_{i-1}\) and \(d_i\)
 is the \(\gcd\) of the determinants of all \(i\times i\) minors of
-\(A\). \(A\sim B\) are similar \(\iff \SNF(A) = \SNF(B)\).
+\(A\). \(A\sim B\) are similar
+\(\iff \mathrm{SNF}(A) = \mathrm{SNF}(B)\).
 
 \end{fact}
 
