/ ‘Real Analysis/UGA Question (with solutions)/UGA_Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Question (with solutions)/UGA_Real_Analysis_Qual_Solutions.tex’ / ‘Real Analysis/UGA Question (with solutions)/UGA_Real_Analysis_Qual_Solutions_stripped.md’ / ‘Real Analysis/UGA Questions (no solutions)/sections/0010_Measure Theory.md’ / ‘Real Analysis/UGA Questions (no solutions)/sections/0021_Integration and L1.md’

--- a/Real Analysis/UGA Question (with solutions)/UGA_Real_Analysis_Qual_Solutions.tex
+++ b/Real Analysis/UGA Question (with solutions)/UGA_Real_Analysis_Qual_Solutions.tex
@@ -3545,7 +3545,7 @@ Hint:
 \subsection{\texorpdfstring{Spring 2021 \# 1
 \(\done\)}{Spring 2021 \# 1 \textbackslash done}}\label{spring-2021-1-done}}
 
-\begin{problem}[Spring 2021 # 1]
+\begin{problem}[Spring 2021, 1]
 
 Let \((X, \mathcal{M},\mu)\) be a measure space and let
 \(E_n \in \mathcal{M}\) be a measurable set for \(n\geq 1\). Let
@@ -5007,7 +5007,9 @@ To see that this doesn't force \(f(x)\to 0\) as
 
 \begin{solution}[of b]
 
-\begin{proof}[Solution 1: Trick]
+\envlist
+
+\begin{proof}[Solution 1, a slight trick]
 
 \envlist
 
